objects/WT_FAQ_Customer_Support__c.object
<CustomObject>
    <fields>
        <fullName>WT_Bank_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Customer_Support_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Support Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>WT_Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>FAQ Customer Support</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>WT_Display_Order__c</columns>
        <columns>WT_Bank_Name__c</columns>
        <columns>WT_Customer_Support_Phone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>FAQ Customer Support Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FAQ Customer Support</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>